assets/css/style.css
@font-face {
    font-family: FiraGoRegular;
    src: url(../fonts/FiraGO-Regular.ttf);
}

@font-face {
    font-family: sfRegular;
    src: url(../fonts/sf-pro-display-regular.woff);
}

@font-face {
    font-family: montHeavy;
    src: url(../fonts/mont-heavy.otf);
}

body {
    font-family: sfRegular !important;
    color: #252D3A;
}

:root {
    --secondary: #FF4E00;
    --secondary-hover: #ff4e00b5 ;
    --primary:#2C7DF0;
    --primary-hover:#0d6efdb3;
    --light:#D8D8D8;
    --fs-7: 14px;
    --fs-8: 12px;
}

.logo {
    max-width: 150px;
    height: auto;
}

.custom-interface {
    max-width: 700px;
    width:700px
}

.widget-container {
    margin-top: 50px;
}

.widget {
    color: white;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 25px !important;
    border: 1px solid #D3D3D3;
    border-radius: 10px;
    width: 100%;
    margin: 0px !important;
}

.widget > div {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.inner-widget{
    display: flex; 
    justify-content: space-between; 
    align-items: center; 
    width: 100%; 
}

.inner-widget .inner-widget{
    background:rgba(0,0,0,0.15); 
    border-radius: 30px;
    padding: 10px 20px;
    margin: 5px 
}

#sales, #groupedNetworks {
   justify-content: space-between;
   gap: 10px;
}

.error {
    background:linear-gradient(123.14deg, rgb(221, 32, 17) 4.05%, rgb(253, 67, 53) 91.29%) !important;
}

.success {
    background:  linear-gradient(123.14deg, rgb(108, 143, 27) 4.05%, rgb(145, 199, 22) 91.29%) !important;
}

.fs-8{
    font-size: var(--fs-8);
}

.fs-7{
    font-size: var(--fs-7);
}

.btn-secondary {
    background-color:var(--secondary) !important;
    border-color: transparent !important;
}

.btn-secondary:hover {
    background-color:var(--secondary-hover) !important;
    border-color: transparent !important;
}
.btn-primary {
    background-color:var(--primary) !important;
    border-color: transparent !important;
}
.btn-primary:hover {
    background-color:var(--primary-hover) !important;
}

.title{
    font-family: montHeavy !important;
}

.input-group {
    flex-wrap: nowrap !important;
}

.input-group input {
   width: 100% !important;
}

input[type=number]:focus {
    box-shadow: none !important;
    border: 1px solid var(--secondary);
}

p {
    margin: 0px !important
}

.form-check-input:checked{
    background-color: transparent !important;
}

.default {
    display: flex;
    flex-direction: column;
    width: 100%;
    align-items: flex-start;
}

form{
    margin: 0
}

.nav-item .active{
    background-color: #FFF8F4 !important;
    border: 2px solid var(--secondary) !important;
    color: #2E3849 !important;
}

.nav-link {
    width: 120px;
    background-color: white !important;
    border: 2px solid var(--light) !important; 
    color: #2E3849 !important;
}

select:focus {
    border-color: var(--secondary) !important;
    color: black !important;
    box-shadow: none !important;
}

